--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 
 <!-- ================= BACKGROUND MUSIC ================= -->
 <audio id="bgMusic" loop preload="auto">
-  <source src="assets/audio/as-one.mp3" type="audio/mpeg">
+  <source src="assets/as-one.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
 
@@ -300,5 +300,6 @@
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
