--- a/index.html
+++ b/index.html
@@ -285,21 +285,18 @@
 </div>
 </footer>
 
-<!-- ================= BACKGROUND MUSIC ================= -->
-<audio id="bgMusic" loop preload="auto">
-  <source src="assets/as-one.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
+<audio id="bgMusic" loop>
+<source src="cyberpunk.mp3" type="audio/mpeg">
 </audio>
 
 <button id="musicBtn">🔇</button>
-
-<div id="soundGate">
-  ▶ Click to enable music
-</div>
+<div id="soundGate">▶ Enter with sound</div>
 
 <script src="app.js"></script>
 </body>
 </html>
+
+
 
 
 
