--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@
 </div>
 </footer>
 
-<audio id="bgMusic" loop>
-<source src="as-one.mp3" type="audio/mpeg">
+<audio id="bgMusic" loop preload="auto">
+  <source src="as-one.mp3" type="audio/mpeg">
 </audio>
 
 <button id="musicBtn">🔇</button>
@@ -295,6 +295,7 @@
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
