--- a/index.html
+++ b/index.html
@@ -269,11 +269,28 @@
 
 <!-- FOOTER -->
 <footer class="site-footer">
-<div class="footer-info">
-<a href="#"><img src="assets/twitter.png"> Twitter</a>
-<a href="#"><img src="assets/telegram.png"> Telegram</a>
-<a href="#"><img src="assets/tiktok.png"> TikTok</a>
-<a href="mailto:contact@idcoin.io"><img src="assets/email.png"> Email</a>
+  <div class="footer-info">
+
+    <a href="https://x.com/Indo_StableCoin" target="_blank" rel="noopener noreferrer">
+      <img src="assets/twitter.png" alt="Twitter">
+      Twitter
+    </a>
+
+    <a href="https://t.me/Indo_StableCoin" target="_blank" rel="noopener noreferrer">
+      <img src="assets/telegram.png" alt="Telegram">
+      Telegram
+    </a>
+
+    <a href="https://www.tiktok.com/@id.coin?_r=1&_t=ZS-92p4G2vvp32" target="_blank" rel="noopener noreferrer">
+      <img src="assets/tiktok.png" alt="TikTok">
+      TikTok
+    </a>
+
+    <a href="mailto:ae.coin@yahoo.com">
+      <img src="assets/email.png" alt="Email">
+      ae.coin@yahoo.com
+    </a>
+    
 </div>
 
 <div class="footer-stats">
@@ -295,6 +312,7 @@
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
