--- a/index.html
+++ b/index.html
@@ -82,12 +82,14 @@
 <!-- ABOUT -->
 <section id="about" class="section">
 <h2>About ID Coin</h2>
-<p><strong>ID Coin (IDC)</strong> is a cryptocurrency asset designed as a stable digital currency with an exchange rate of <strong>1 Rupiah pegged to 1 United States Dollar (USD)</strong> on the Tron network.</p>
+<p><strong>ID Coin (IDC)</strong> is a cryptocurrency asset designed as a stable digital currency with an exchange rate of <strong>1 ID Coin is pegged to 1 United States Dollar (USD)</strong> on the Tron network.</p>
 <p>IDC is pegged to a 1 USD equivalent exchange mechanism, providing consistent value stability for users, businesses, and the digital financial ecosystem.</p>
 <p>Built on the efficient blockchain network <strong>TRON (TRC20)</strong>, ID Coin combines transaction speed, low fees, and on-chain transparency.</p>
 <ul>
 <li>Everyday digital transactions</li>
-<li>Store of value</li>
+<li>low-fee cross-border transactions</li>
+<li>sending large sums of money at low fees</li>
+<li>Store of value/savings</li>
 <li>Cross-platform payments</li>
 <li>DeFi and Web3 integration</li>
 </ul>
@@ -312,6 +314,7 @@
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
