--- a/index.html
+++ b/index.html
@@ -262,10 +262,10 @@
   <div class="modal-content">
     <span class="close" onclick="closeFiatLeak()">×</span>
     <iframe
-      src="https://fiatleak.com/usdt"
-      frameborder="0"
-      allowfullscreen>
-    </iframe>
+  id="fiatFrame"
+  frameborder="0"
+  allowfullscreen>
+</iframe>
   </div>
 </div>
 
@@ -314,6 +314,7 @@
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
